refactor: reduce paging response
